feat: story 3